--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Peter J. Jones",
-  "license": "BSD2",
+  "license": "BSD-2-Clause",
   "dependencies": {
     "jshint": "^2.8.0",
     "mockapie": "git://pmade.com/mockapie"
