Use *exact* version numbers with npm so it can't upgrade things behind your back

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Peter J. Jones",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "jshint": "^2.8.0",
+    "jshint": "2.8.0",
     "mockapie": "git://pmade.com/mockapie"
   },
   "repository": {
